--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -14,12 +14,12 @@ android {
     // http://stackoverflow.com/questions/32153318/httpclient-wont-import-in-android-studio
     useLibrary 'org.apache.http.legacy'
 
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 24
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -40,7 +40,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:support-v13:25.0.0'
-    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile androidDependencies.appcompat_v7
     testCompile 'junit:junit:4.12'
     compile('commons-lang:commons-lang:2.6') {
         exclude group: 'commons-logging'
